--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1190,14 +1190,14 @@ Course Category
   top: 0px;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(187, 106, 68, 0.8);
   z-index: -1;
   transition: .4s;
 }
 
 .course-category:hover:before {
-  background: #D49414;
-  border-color: #D49414;
+  background: #ef7e1a;
+  border-color: #ef7e1a;
   opacity: .85;
 }
 
