--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1190,19 +1190,19 @@ Course Category
   top: 0px;
   width: 100%;
   height: 100%;
-  background: rgba(187, 106, 68, 0.8);
+  /* background: rgba(187, 106, 68, 0.8); */
   z-index: -1;
   transition: .4s;
 }
 
 .course-category:hover:before {
-  background: #ef7e1a;
-  border-color: #ef7e1a;
+  /* background: #ef7e1a;
+  border-color: #ef7e1a; */
   opacity: .85;
 }
 
 .course-category:hover h4 a {
-  color: #fff;
+  color: #e5a88b;
 }
 
 .course-category:hover p {
@@ -1228,7 +1228,7 @@ Course Category
 }
 
 .course-category h4 a {
-  color: #fff;
+  color: #4a2c10;
 }
 
 .course-category p {
