--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1190,14 +1190,14 @@ Course Category
   top: 0px;
   width: 100%;
   height: 100%;
-  /* background: rgba(187, 106, 68, 0.8); */
+  background: rgba(187, 106, 68, 0.8);
   z-index: -1;
   transition: .4s;
 }
 
 .course-category:hover:before {
-  /* background: #ef7e1a;
-  border-color: #ef7e1a; */
+  background: #ef7e1a;
+  border-color: #ef7e1a;
   opacity: .85;
 }
 
@@ -1228,8 +1228,74 @@ Course Category
 }
 
 .course-category h4 a {
-  color: #4a2c10;
+  color: #fff;
 }
+
+/*=======================
+Course Category
+========================*/
+.course-categorya {
+  text-align: center;
+  border-radius: 5px;
+  background: #fff;
+  padding: 80px 20px 30px;
+  transition: .4s;
+  overflow: hidden;
+  margin-bottom: 30px;
+  margin: 10px;
+  position: relative;
+  z-index: 1;
+}
+
+.course-categorya:before {
+  position: absolute;
+  content: "";
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  /* background: rgba(187, 106, 68, 0.8); */
+  z-index: -1;
+  transition: .4s;
+}
+
+.course-categorya:hover:before {
+  /* background: #ef7e1a;
+  border-color: #ef7e1a; */
+  opacity: .85;
+}
+
+.course-categorya:hover h4 a {
+  color: #e5a88b;
+}
+
+.course-categorya:hover p {
+  color: #fff;
+}
+
+.course-categorya:hover .category-icon {
+  margin-top: -5px;
+}
+
+.course-categorya .category-icon {
+  font-size: 35px;
+  margin: 0 auto 30px;
+  color: #fff;
+  transition: .4s;
+}
+
+.course-categorya h4 {
+  margin-bottom: 0px;
+  font-size: 20px;
+  transition: .4s;
+  font-weight: 600;
+}
+
+.course-categorya h4 a {
+  color: #c59093;
+}
+
+/* ========================= */
 
 .course-category p {
   transition: .4s;
